<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/auth"
    tools:context=".AuthActivity"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:id="@+id/edit_text_sign_in_email"
        android:inputType="textEmailAddress"
        android:hint="Email..."
        android:layout_margin="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:background="@drawable/edit_text"
        android:inputType="textPassword"
        android:id="@+id/edit_text_sign_in_password"
        android:hint="Password..."
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_wrong_sign_in"
        android:textColor="@color/colorAccent" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="Sign In"
        android:background="@drawable/button_ripple"
        android:id="@+id/button_sign_in"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:id="@+id/tv_sign_up"
        android:text="SIGN UP"/>
</LinearLayout>