...
                <Button
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/button_ripple"
                    android:id="@+id/button_save_watch_progress"
                    android:text="Save progress"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_ripple"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:padding="10dp"
                    android:id="@+id/button_add_to_watchlist"
                    android:text="Add to watchlist"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
...
