...
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_movie_list"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
...
