<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/register"
    tools:context=".RegisterActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/edit_text_register_email"
        android:hint="Enter your email..."
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Create a password..."
        android:id="@+id/edit_text_register_password"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:text="Create an account"
        android:background="@drawable/button_ripple"
        android:id="@+id/button_create_account"/>

</LinearLayout>